--- a/index.Rmd
+++ b/index.Rmd
@@ -4,3 +4,6 @@ title: "A short course on multiplex single-cell imaging in R"
 
 
 This page contains materials by [Julia Wrobel](http://juliawrobel.com/) for the short course titled "A workshop for analysis of multiplex single-cell imaging data in R" held at the University of Michigan on April 6, 2023.
+
+
+Acknowledgements here.
