--- a/MI_intro.Rmd
+++ b/MI_intro.Rmd
@@ -57,13 +57,9 @@ library(EBImage)
 my_path = here::here("DataCode")
 
 # define file for different .tif files
-component = "http://juliawrobel.com/MI_tutorial/DataCode/#16 3-171-807_[62243,18509]_component_data.tif"
-binseg = paste0(my_path, "/", "#16 3-171-807_[62243,18509]_binary_seg_maps.tif")
-composite_tif = paste0(my_path, "/", "#16 3-171-807_[62243,18509].tif")
-
-
-
-julia
+component = here::here("DataCode", "lung_component_data.tif") 
+binseg =  here::here("DataCode", "lung_binary_seg_maps.tif")
+composite_tif = here::here("DataCode", "lung.tif")
 ```
 
 
