--- a/MI_intro.Rmd
+++ b/MI_intro.Rmd
@@ -169,7 +169,7 @@ Resources from Akoya Biosciences on working with this data
 
 Below are some references that review this rapidly growing area.
 
-* [textbook chapter, Wrobel and Vandekar](https://link.springer.com/protocol/10.1007/978-1-0716-2986-4_8)
+* [textbook chapter, Wrobel and Vandekar](http://juliawrobel.com/Downloads/mIF_chapter.pdf)
 * [Challenges and Opportunities in the Statistical Analysis of Multiplex Immunofluorescence Data](https://www.mdpi.com/2072-6694/13/12/3031)
 * [Catching up with multiplexed tissue imaging](https://www.nature.com/articles/s41592-022-01428-z) 
 * [The emerging landscape of spatial profiling technologies](https://www.nature.com/articles/s41576-022-00515-3)
