--- a/MI_spatialAnalysis.Rmd
+++ b/MI_spatialAnalysis.Rmd
@@ -294,4 +294,5 @@ Also allows for calculation of bivariate K, univariate and bivariate L, G, with 
 * [paper for spatialTIME package](https://academic.oup.com/bioinformatics/article/37/23/4584/6420699) and associated [methods paper](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1009900)
 * [textbook chapter, Wrobel and Vandekar](https://link.springer.com/protocol/10.1007/978-1-0716-2986-4_8)
 * [Challenges and Opportunities in the Statistical Analysis of Multiplex Immunofluorescence Data](https://www.mdpi.com/2072-6694/13/12/3031)
+* [Chervoneva, 2022](https://academic.oup.com/bioinformatics/article/37/10/1452/6020255)
 
